GROOVY-10053